--- a/components/StickyBar.module.css
+++ b/components/StickyBar.module.css
@@ -1,1 +1,12 @@
-.wrap{ position: fixed; right:16px; bottom:16px; z-index:30; } @media (min-width: 900px){ .wrap{ display:none; } }
+.wrap {
+    position: fixed;
+    right: 16px;
+    bottom: 16px;
+    z-index: 30;
+}
+
+@media (min-width: 900px) {
+    .wrap {
+        display: none;
+    }
+}
